login program added

--- a/login.html
+++ b/login.html
@@ -28,13 +28,13 @@
                 <a class="nav-link " aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link " href="mybook.html">My Books</a>
+                <a class="nav-link active" href="mybook.html">My Books</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="aboutus.html">About US</a>
+                <a class="nav-link" href="aboutus.html">About US</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -44,16 +44,94 @@
           </div>
         </div>
     </nav>
-    <h1 style="text-align: center;color: black;">About US</h1>
-            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                <p>A library is a collection of materials, books or media that are accessible for use and not just for display purposes. A library provides physical (hard copies) or digital access (soft copies) materials, and may be a physical location or a virtual space, or both. A library's collection can include printed materials and other physical resources in many formats such as DVD, CD and cassette as well as access to information, music or other content held on bibliographic databases.
-
-                    A library, which may vary widely in size, may be organized for use and maintained by a public body such as a government; an institution such as a school or museum; a corporation; or a private individual. In addition to providing materials, libraries also provide the services of librarians who are trained and experts at finding, selecting, circulating and organizing information and at interpreting information needs, navigating and analyzing very large amounts of information with a variety of resources.
-                    
-                    Library buildings often provide quiet areas for studying, as well as common areas for group study and collaboration, and may provide public facilities for access to their electronic resources; for instance: computers and access to the Internet. The library's clientele and services offered vary depending on its type: users of a public library have different needs from those of a special library or academic library, for example. Libraries may also be community hubs, where programs are delivered and people engage in lifelong learning. Modern libraries extend their services beyond the physical walls of a building by providing material accessible by electronic means, including from home via the Internet.
-                    
-                    The services the library offers are variously described as library services, information services, or the combination "library and information services", although different institutions and sources define such terminology differently.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <h1 style="color: orange; text-align: center;">LOGIN</h1>
+                <table class="table">
+                    <tr>
+                        <td>Username:</td>
+                        <td><input class="form-control" type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>Password:</td>
+                        <td><input class="form-control"type="password" name="" id=""></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button class="btn btn-outline-success"style="background-color:lightgreen;">Submit</button></td>
+                    </tr>
+                </table>
             </div>
+            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                <h1 style="color: navy; text-align: center;">Register</h1>
+                <table class="table">
+                    <tr>
+                        <td>Name:</td>
+                        <td><input class="form-control"type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>Address:</td>
+                        <td><textarea class="form-control"name="" id="" cols="30" rows="10"></textarea></td>
+                    </tr>
+                    <tr>
+                        <td>Pincode:</td>
+                        <td><input class="form-control"type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>District:</td>
+                        <td><input class="form-control"type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>EmailID:</td>
+                        <td><input class="form-control"type="email" name=""id=""></td>
+                    </tr>
+                    <tr>
+                        <td>Gender:</td>
+                        <td><select class="form-control"name="" id="">
+                            <option value="Select">Select</option>
+                            <option value="Male">Male</option>
+                            <option value="Female">Female</option>
+                            <option value="Other">Other</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td>PhoneNo:</td>
+                        <td><input class="form-control"type="tel"></td>
+                    </tr>
+                    <tr>
+                        <td>Blood Group:</td>
+                        <td><select class="form-control"name="" id="">
+                            <option value="Select">Select</option>
+                            <option value="A-">A-</option>
+                            <option value="B+">B+</option>
+                            <option value="B-">B-</option>
+                            <option value="O-">O-</option>
+                            <option value="O+">O+</option>
+                            <option value="AB+">AB+</option>
+                            <option value="AB-">AB_</option>
+                        </select></td>
+                    </tr>
+                    <tr>
+                        <td>Username:</td>
+                        <td><input class="form-control"type="text"></td>
+                    </tr>
+                    <tr>
+                        <td>Password:</td>
+                        <td><input class="form-control"type="password" name="" id=""></td>
+                    </tr>
+                    <tr>
+                        <td>Confirm Password:</td>
+                        <td><input class="form-control"type="password" name="" id=""></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td><button class="btn btn-outline-success"style="background-color: lightgreen;">Register</button></td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>    
         <div style="background-color: lightgreen; text-align: center;">
             <p>Open Library is an initiative of the Internet Archive, a 501(c)(3) non-profit, building a digital library of Internet sites and other cultural artifacts in digital form. Other projects include the Wayback Machine, archive.org and archive-it.org</p>
         </div>        
