--- a/login.html
+++ b/login.html
@@ -46,89 +46,81 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                <h1 style="color: orange; text-align: center;">LOGIN</h1>
-                <table class="table">
-                    <tr>
-                        <td>Username:</td>
-                        <td><input class="form-control" type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>Password:</td>
-                        <td><input class="form-control"type="password" name="" id=""></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><button class="btn btn-outline-success"style="background-color:lightgreen;">Submit</button></td>
-                    </tr>
-                </table>
-            </div>
-            <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-                <h1 style="color: navy; text-align: center;">Register</h1>
-                <table class="table">
-                    <tr>
-                        <td>Name:</td>
-                        <td><input class="form-control"type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>Address:</td>
-                        <td><textarea class="form-control"name="" id="" cols="30" rows="10"></textarea></td>
-                    </tr>
-                    <tr>
-                        <td>Pincode:</td>
-                        <td><input class="form-control"type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>District:</td>
-                        <td><input class="form-control"type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>EmailID:</td>
-                        <td><input class="form-control"type="email" name=""id=""></td>
-                    </tr>
-                    <tr>
-                        <td>Gender:</td>
-                        <td><select class="form-control"name="" id="">
-                            <option value="Select">Select</option>
-                            <option value="Male">Male</option>
-                            <option value="Female">Female</option>
-                            <option value="Other">Other</option>
-                        </select></td>
-                    </tr>
-                    <tr>
-                        <td>PhoneNo:</td>
-                        <td><input class="form-control"type="tel"></td>
-                    </tr>
-                    <tr>
-                        <td>Blood Group:</td>
-                        <td><select class="form-control"name="" id="">
-                            <option value="Select">Select</option>
-                            <option value="A-">A-</option>
-                            <option value="B+">B+</option>
-                            <option value="B-">B-</option>
-                            <option value="O-">O-</option>
-                            <option value="O+">O+</option>
-                            <option value="AB+">AB+</option>
-                            <option value="AB-">AB_</option>
-                        </select></td>
-                    </tr>
-                    <tr>
-                        <td>Username:</td>
-                        <td><input class="form-control"type="text"></td>
-                    </tr>
-                    <tr>
-                        <td>Password:</td>
-                        <td><input class="form-control"type="password" name="" id=""></td>
-                    </tr>
-                    <tr>
-                        <td>Confirm Password:</td>
-                        <td><input class="form-control"type="password" name="" id=""></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td><button class="btn btn-outline-success"style="background-color: lightgreen;">Register</button></td>
-                    </tr>
-                </table>
+            <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+               <div class="row">
+                    <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <h1 style="color: orange;text-align: center;">LOGIN</h1>
+                            <label for="" class="form-label">Username:</label>
+                            <input placeholder="Enter your username" type="text" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Password:</label>
+                            <input placeholder="Enter your password"type="password" name="" id="" class="form-control">
+                        </div>
+                        <br>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <button class="btn btn-success">Login</button>
+                        </div>
+                    </div>
+                    <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+                        <h1 style="color: navy;text-align: center;">Register</h1>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Name:</label>
+                            <input placeholder="Enter your name"type="text" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Email ID:</label>
+                            <input placeholder="Enter your email"type="email" name="" id="" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Mobile NO:</label>
+                            <input placeholder="Enter your mobile no"type="tel" name="" id="" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Gender:</label>
+                            <select name="" id="" class="form-control">
+                                <option value="Select">Select</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Other">Other</option>
+                            </select>
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Blood Group:</label>
+                            <select class="form-control"name="" id="">
+                                <option value="Select">Select</option>
+                                <option value="A-">A-</option>
+                                <option value="B+">B+</option>
+                                <option value="B-">B-</option>
+                                <option value="O-">O-</option>
+                                <option value="O+">O+</option>
+                                <option value="AB+">AB+</option>
+                                <option value="AB-">AB_</option>
+                            </select>
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Pincode:</label>
+                            <input placeholder="Enter your pincode"type="text" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Username:</label>
+                            <input placeholder="Enter your username"type="text" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Password:</label>
+                            <input placeholder="Enter your Password"type="password" name="" id="" class="form-control">
+                        </div>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <label for="" class="form-label">Confirm Password:</label>
+                            <input placeholder="Enter your confirm password"type="password" name="" id="" class="form-control">
+                        </div>
+                        <br>
+                        <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+                            <button class="btn btn-success">Register</button>
+                        </div>
+                    </div>
+               </div>
             </div>
         </div>
     </div>    
